--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="row pl-3">
   <ng-container *ngFor="let p of phones">
     <div class="phone-card card mx-3 mb-3" (click)="openPhoneDetails(p)">
@@ -19,3 +20,4 @@
     </div>
   </ng-container>
 </div>
+<router-outlet></router-outlet>
