login & header changes

--- a/Frontend/shreeji-shop/src/app/components/auth/auth.component.html
+++ b/Frontend/shreeji-shop/src/app/components/auth/auth.component.html
@@ -11,7 +11,7 @@
               role="tab"
               aria-selected="true"
             >
-              <span class="pl-2">Sign in</span>
+              <span class="pl-2">Login</span>
             </a>
           </li>
           <li class="nav-item" (click)="currentTab = 'signUp'">
