add to cart changes FE & BE

--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.html
@@ -56,5 +56,6 @@
   <p class="other-phones">More from {{ brandName }}</p>
   <app-phone-model
     [phoneResponse]="phoneModelSubject.asObservable()"
+    (addToCart)="checkAndAddToCart($event)"
   ></app-phone-model>
 </div>
