--- a/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
+++ b/Frontend/shreeji-shop/src/app/components/phone-model/phone-model.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div class="row pl-3">
   <ng-container *ngFor="let p of phones">
-    <div class="phone-card card mx-3 mb-3" (click)="openPhoneDetails(p)">
-      <div class="card-body">
+    <div class="phone-card card mx-3 mb-3">
+      <div class="card-body" (click)="openPhoneDetails(p)">
         <img [src]="p.imgUrl" [alt]="p.name" class="phone-image" />
         <p class="p-0 m-0 mt-2 phone-name">{{ p.brandName }}-{{ p.name }}</p>
         <p class="p-0 m-0 price">Rs.{{ p.priceEur }}</p>
@@ -12,6 +12,7 @@
       >
         <button
           class="btn d-flex align-items-baseline justify-content-center w-100 mx-3 add-to-cart-btn"
+          (click)="emitAddToCart(p)"
         >
           <img src="/assets/icons/cart.svg" />
           <span class="pl-1 text-white">Add to cart</span>
