user-actions changes

--- a/Frontend/shreeji-shop/src/app/components/auth/auth.component.html
+++ b/Frontend/shreeji-shop/src/app/components/auth/auth.component.html
@@ -38,7 +38,7 @@
       </div>
       <div class="modal-body tab-content p-3">
         <form
-          class="needs-validation tab-pane show active"
+          class="tab-pane show active"
           autocomplete="off"
           novalidate=""
           id="signin-tab"
@@ -102,7 +102,7 @@
           </button>
         </form>
         <form
-          class="needs-validation tab-pane"
+          class="tab-pane"
           autocomplete="off"
           novalidate=""
           id="signup-tab"
