--- a/Frontend/shreeji-shop/src/app/components/home/home.component.html
+++ b/Frontend/shreeji-shop/src/app/components/home/home.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
-<app-tagline (applySort)="sortPhones($event)"></app-tagline>
+<app-tagline
+  [tagLine]="tagLineSub.asObservable()"
+  (applySort)="sortPhones($event)"
+></app-tagline>
 <div class="d-flex offset-sm-auto offset-lg-2 p-2">
   <div
     class="col-sm-4 col-lg-3 col-xl-2 p-2 bg-white all-filters-container card h-100"
