--- a/Frontend/shreeji-shop/src/app/components/tagline/tagline.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/tagline/tagline.component.scss
@@ -4,21 +4,26 @@ $container-bg: #373f50;
   background-color: $container-bg;
   margin-top: 5rem;
   padding: 3rem 1rem 5rem 11.3rem;
-}
-h1 {
-  font-weight: 500;
-  letter-spacing: 0.5px;
-}
-.filter-container {
-  position: relative;
-  top: 4rem;
-  left: 3.5rem;
-
-  span {
-    width: 5rem;
+  h1 {
+    font-weight: 500;
+    letter-spacing: 0.5px;
   }
+  .filter-container {
+    position: relative;
+    top: 4rem;
+    left: 3.5rem;
 
-  select {
-    cursor: pointer;
+    span {
+      width: 5rem;
+    }
+
+    select {
+      cursor: pointer;
+    }
+  }
+  .subTagline {
+    position: absolute;
+    top: 12.5rem;
+    left: 39.7rem;
   }
 }
