profile info completed

--- a/Frontend/shreeji-shop/src/app/components/user-action/user-action.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/user-action.component.html
@@ -68,7 +68,7 @@
       </span>
     </div>
   </div>
-  <div class="col-7 p-3 pl-5">
+  <div class="col-7 pt-1 pr-3 pb-3 pl-5">
     <ng-container *ngTemplateOutlet="templateToActivate"></ng-container>
   </div>
 </div>
