--- a/Frontend/shreeji-shop/src/app/components/user-action/user-profile/user-profile.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/user-profile/user-profile.component.html
@@ -4,10 +4,9 @@
   novalidate=""
   [formGroup]="profileForm"
 >
-  <span #progressSpan class="small py-2" id="progress-span"></span>
+  <span #progressSpan class="small pb-2 visibility-hidden" id="progress-span"></span>
   <div class="form-group" id="name-group">
     <label for="name">Full name</label>
-    <!-- [(ngModel)]="userDetails.name" -->
     <input
       [formControlName]="'name'"
       class="form-control"
@@ -28,7 +27,6 @@
   </div>
   <div class="form-group" id="phone-group">
     <label for="phone">Phone number</label>
-    <!-- [(ngModel)]="userDetails.phoneNumber" -->
     <input
       [formControlName]="'phone'"
       class="form-control"
@@ -51,7 +49,6 @@
   </div>
   <div class="form-group" id="email-group">
     <label for="email">Email address</label>
-    <!-- [(ngModel)]="userDetails.email" -->
     <input
       [formControlName]="'email'"
       class="form-control"
@@ -74,7 +71,6 @@
   </div>
   <div class="form-group" id="pincode-group">
     <label for="pincode">Pincode</label>
-    <!-- [(ngModel)]="userDetails.pinCode" -->
     <input
       [formControlName]="'pinCode'"
       class="form-control"
@@ -98,7 +94,6 @@
   </div>
   <div class="form-group" id="address-group">
     <label for="address">Address</label>
-    <!-- [(ngModel)]="userDetails.address" -->
     <textarea
       [formControlName]="'address'"
       class="form-control"
