--- a/Frontend/shreeji-shop/src/styles.scss
+++ b/Frontend/shreeji-shop/src/styles.scss
@@ -12,3 +12,11 @@
 .h-fit-content {
   height: fit-content;
 }
+
+.visibility-visible {
+  visibility: visible !important;
+}
+
+.visibility-hidden {
+  visibility: hidden !important;
+}
