--- a/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
+++ b/Frontend/shreeji-shop/src/app/components/user-action/wishlist/wishlist.component.html
@@ -1,1 +1,31 @@
-<p>wishlist works!</p>
+<table class="table" *ngIf="wishlistItems?.length > 0; else emptyCart">
+  <tbody>
+    <tr *ngFor="let wishlistItem of wishlistItems; let i = index">
+      <td class="phone-image-td">
+        <img
+          [src]="wishlistItem.modelImgUrl"
+          [alt]="wishlistItem.modelName"
+          class="phone-image"
+        />
+      </td>
+      <td class="phone-desc-td">
+        <p class="p-0 m-0 mt-2 phone-name" (click)="openPhoneDetails(wishlistItem)">
+          {{ wishlistItem.brandName }}-{{ wishlistItem.modelName }}
+        </p>
+        <p class="p-0 m-0 price">
+          Rs.{{ getConvertedPrice(wishlistItem.priceEur) }}
+        </p>
+      </td>
+      <td class="remove-phone-td">
+        <button
+          type="button"
+          class="btn btn-sm btn-danger"
+          (click)="removePhone(wishlistItem)"
+        >
+          Remove
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<ng-template #emptyCart></ng-template>
