--- a/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
+++ b/Frontend/shreeji-shop/src/app/components/phone-detail/phone-detail.component.scss
@@ -58,7 +58,9 @@ img.phone-image {
   background-color: #ff4142;
 }
 .add-to-wishlist-btn {
-  box-shadow: 0 0.5rem 1.125rem -0.5rem #5a6268;
+  background-color: #f8f9fa;
+  color: #000;
+  box-shadow: 0 0.5rem 1.125rem -0.5rem #5a62686e;
 }
 img.bi.bi-heart {
   position: relative;
