--- a/Frontend/shreeji-shop/src/styles.scss
+++ b/Frontend/shreeji-shop/src/styles.scss
@@ -20,3 +20,53 @@
 .visibility-hidden {
   visibility: hidden !important;
 }
+
+.toaster {
+  visibility: hidden;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  z-index: 10;
+}
+
+.toaster.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
